[package]
name = "pertinent"
version = "0.1.0"
authors = ["Brock Wilcox <awwaiid@thelackthereof.org>"]
edition = "2018"

[lib]
name = "parser"
path = "src/parser.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.0"
indoc = "1.0"
