[package]
name = "pertinent"
version = "0.1.0"
authors = ["Brock Wilcox <awwaiid@thelackthereof.org>"]
edition = "2021"

[lib]
name = "parser"
path = "src/parser.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1"
indoc = "2.0"
bevy = { version = "0.18", default-features = false, features = [
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_text",
    "bevy_ui",
    "x11",
    "png",
] }
