[package]
name = "pertinent"
version = "0.1.0"
authors = ["Brock Wilcox <awwaiid@thelackthereof.org>"]
edition = "2021"

[lib]
name = "parser"
path = "src/parser.rs"

[[bin]]
name = "pertinent"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1"
indoc = "2.0"
bevy = "0.18"
image = "0.25"
printpdf = "0.7"
